2008-10-31  Murray Cumming  <murrayc@murrayc.com>

	* Many files: Updated developer.gnome.org/projects links 
	to the new locations, such as live.gnome.org pages or 
	library.gnome.org.

2008-10-31  Murray Cumming  <murrayc@murrayc.com>

	* Changed all www.gnome.org/projects/* links to 
	projects.gnome.org/* links.

2008-11-02  Murray Cumming  <murrayc@murrayc.com>

	* configure.in:
	* www.gnome.org/projects/bugsquad/Makefile.am:
	* www.gnome.org/projects/bugsquad/statistics/:
	Restored these sub-directories from the old www.gnome.org pages, 	
	adding proper Makefile.am files and using .wml instead of .html.
	As before, this is not actually linked from anywhere, I think.
	* www.gnome.org/projects/bugsquad/index.wml: Make this just a link 
	to the wiki pages instead of duplicating that content.

2008-11-02  Murray Cumming  <murrayc@murrayc.com>

	* configure.in:
	* www.gnome.org/projects/Makefile.am:
	* www.gnome.org/projects/bugsquad/ChangeLog:
	* www.gnome.org/projects/bugsquad/Makefile.am:
	* www.gnome.org/projects/bugsquad/index.wml: Moved from 
	web-devel-2, not moving pages that were no longer used and/or 
	were moved to live.gnome.org.

2008-10-31  Murray Cumming  <murrayc@murrayc.com>

	* www.gnome.org/projects/devtools/images/Makefile.am: Add this 
	directory and the Makefile.am to fix the build.

2008-10-31  Murray Cumming  <murrayc@murrayc.com>

	* include/www.gnome.org/menus.wml:
	* www.gnome.org/about/why.wml:
	* www.gnome.org/mobile/index.wml:
	* www.gnome.org/press/releases/accessible.wml:
	* www.gnome.org/press/releases/assistivetech.wml:
	* www.gnome.org/projects/accessibility/talks/CSUN-02/y-q-and-a.html:
	* www.gnome.org/projects/accessibility/talks/GUADEC/kbdhow1.html:
	* www.gnome.org/projects/accessibility/talks/GUADEC/qanda.html:
	* www.gnome.org/start/2.0/whatsnew.html:
	* www.gnome.org/start/2.4/notes/rnwhatsnew.html:
	Updated links for accessibility now that d.g.o/projects/gap/ has 
	been removed.
