@@ -331,7 +331,6 @@ www.gnome.org/press/Makefile
 www.gnome.org/press/releases/Makefile
 www.gnome.org/faqs/Makefile
 www.gnome.org/contact/Makefile
-www.gnome.org/roadmap/Makefile
 www.gnome.org/softwaremap/Makefile
 www.gnome.org/tour/Makefile
 www.gnome.org/tour/docbook/Makefile
