@@ -1,10 +1,0 @@
-SUBDIRS = 
-
-urlpath = /roadmap
-
-page_SCRIPTS = \
-	index.html
-
-page_DATA =
-
-include $(top_srcdir)/rules.common
