@@ -1,3 +1,11 @@
+2008-11-03  Murray Cumming  <murrayc@murrayc.com>
+
+	* configure.in:
+	* www.gnome.org/Makefile.am:
+	* www.gnome.org/roadmap/: Deleted this old version of 
+	the GNOME roadmap, which does not seem to be linked from 
+	anywhere.
+
 2008-10-31  Murray Cumming  <murrayc@murrayc.com>
 
 	* Many files: Updated developer.gnome.org/projects links 
